@@ -526,12 +526,22 @@ tab[selected="true"] label {
     font-size: 100%;
     font-weight: bold;
     display: block;
+    background-color: transparent;
+    border: none;
+    padding: none;
+    margin: 0px;
+    -moz-appearance: none;
 }
 
 .library-content-item-description {
     line-height:90%;
     font-size: 90%;
     display: block;
+    background-color: transparent;
+    border: none;
+    padding: none;
+    margin: 0px;
+    -moz-appearance: none;
 }
 
 .library-content-item-detail {
